# 02671-Data-Driven-Methods---Project-1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  science.mplstyle  train.py
Exercises/W1-SVD/: ex1_7.py  ex_X01_1.py  ex_X01_1_DATA_GEN.py  ex_X01_2.py
Exercises/W1-SVD/1-7/: ex1_7.py
Exercises/W1-SVD/X01-1/: ex_X01_1.py  ex_X01_1_DATA_GEN.py
Exercises/W1-SVD/X01-2/: ex_X01_2.py
Exercises/W2-NN/6-1/: ex6_1a_eval.py  ks_data_gen.py
Exercises/W4-SINDy/7-4/: ex7_4.py
Exercises/W4-SINDy/X3-1/: ex_X03_1.py
Exercises/W5-DMD/: README.md
conf/: config.yaml
conf/data/: ks.yaml
conf/experiment/: ex6_1a_ks.yaml
conf/model/: ks_mlp.yaml  svd_mlp.yaml
conf/training/: default.yaml  fast.yaml
src/ML/: __init__.py  dataset.py  evaluation.py  models.py  plotting.py  trainer.py
